k8s/11-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walletsys-app
  namespace: walletsys
  labels:
    app: walletsys-app
spec:
  type: ClusterIP
  selector:
    app: walletsys-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
